--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,7 +33,7 @@
     "owner": "Владелец",
     "about": "Информация",
     "socials": "Социальные сети",
-    "collaboration": "Сотрудничество",
+    "collaboration": "Коллаборация",
     "advertise": "Реклама",
     "barter": "Бартер",
     "announce": "Объявления",
