added reklamadatel page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -55,5 +55,20 @@
     "cancel": "Отмена",
     "save": "Сохранить",
     "my_profile": "Мой профиль",
-    "settings": "Настройки"
+    "settings": "Настройки",
+    "for_house": "Всё для дома",
+    "beauty": "Beauty",
+    "food": "Еда",
+    "entertainment": "Развлекательные",
+    "content_freelancers": "Контент (фрилансеры)",
+    "hotels_rest_areas": "Отели \\ Зоны отдыха",
+    "clothing": "Одежда",
+    "sport": "Спорт",
+    "technology": "Технологии",
+    "tourism": "Туризм",
+    "medicine": "Медицина",
+    "charity": "Благотворительность",
+    "auto": "Авто",
+    "education": "Обучение",
+    "creativity": "Творчество"
 }
