--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -70,5 +70,6 @@
     "charity": "Благотворительность",
     "auto": "Авто",
     "education": "Обучение",
-    "creativity": "Творчество"
+    "creativity": "Творчество",
+    "agreed": "Согласованный"
 }
