--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -70,5 +70,6 @@
     "charity": "Xayriya",
     "auto": "Avto",
     "education": "Ta'lim",
-    "creativity": "Ijod"
+    "creativity": "Ijod",
+    "agreed":"Rozilik bildirganlar"
 }
