Pushed test for userId

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -71,5 +71,6 @@
     "auto": "Авто",
     "education": "Обучение",
     "creativity": "Творчество",
-    "agreed": "Согласованный"
+    "agreed": "Согласованный",
+    "example":"Образец"
 }
