--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -71,5 +71,6 @@
     "auto": "Avto",
     "education": "Ta'lim",
     "creativity": "Ijod",
-    "agreed":"Rozilik bildirganlar"
+    "agreed": "Rozilik bildirganlar",
+    "example": "Namuna"
 }
