--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -72,5 +72,6 @@
     "education": "Обучение",
     "creativity": "Творчество",
     "agreed": "Согласованный",
-    "example":"Образец"
+    "example": "Образец",
+    "footer": "Контакт"
 }
