--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -72,5 +72,6 @@
     "education": "Ta'lim",
     "creativity": "Ijod",
     "agreed": "Rozilik bildirganlar",
-    "example": "Namuna"
+    "example": "Namuna",
+    "footer": "Aloqa uchun"
 }
