Tested for my-promotion

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -73,5 +73,6 @@
     "creativity": "Творчество",
     "agreed": "Согласованный",
     "example": "Образец",
-    "footer": "Контакт"
+    "footer": "Контакт",
+    "my_promotions": "Мои публикации"
 }
