--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -55,7 +55,7 @@
     "cancel": "Bekor qilish",
     "save": "Saqlash",
     "my_profile": "Mening hisobim",
-    "settings": "Sozlamalar",
+    "my_promotions": "Mening e'lonlarim",
     "for_house": "Uy uchun",
     "beauty": "Go'zallik",
     "food": "Ovqat",
