Pushed for testing

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -74,5 +74,72 @@
     "agreed": "Согласованный",
     "example": "Образец",
     "footer": "Контакт",
-    "my_promotions": "Мои публикации"
+    "my_promotions": "Мои публикации",
+    "category_object": {
+        "lifestyle": "Лайфстайл",
+        "food_blogger": "Фуд блогер/Обзор кафе",
+        "beauty_blogger": "Бьюти/Красота блогер",
+        "tourism": "Туризм/Путешествия",
+        "gamer_streamer": "Геймер/Стример",
+        "business_crypto": "Бизнес/Заработок/Крипта",
+        "family": "Семья/Family",
+        "fashion": "Мода/Одежда/Fashion",
+        "sport": "Спорт",
+        "health_medicine": "Здоровье/Медицина",
+        "entertainment_viner": "Развлекательный/Вайнер",
+        "music_actor": "Музыка/Актер",
+        "art": "Искусство",
+        "tech_blogger": "Техно блогер",
+        "news_blog": "Новостной блог/Паблики",
+        "motivation_self_development": "Мотивация и Саморазвитие",
+        "education": "Обучение и Образование",
+        "auto_blog": "Авто блог",
+        "marketing": "Маркетинг",
+        "real_estate": "Недвижимость",
+        "interior_design": "Интерьер и Дизайн",
+        "religion": "Религия",
+        "model": "Модель",
+        "technology_electronics": "Технологии и электроника",
+        "clothing_fashion_jewelry": "Одежда, мода и ювелирные изделия",
+        "beauty_personal_care": "Красота и личная гигиена",
+        "health_fitness": "Здравоохранение и фитнес",
+        "automobiles_autoparts": "Автомобили и автозапчасти",
+        "business_services": "Бизнес-услуги",
+        "restaurants_food": "Рестораны и еда",
+        "travel": "Путешествия",
+        "art_entertainment": "Искусство и развлечения",
+        "sports_recreation": "Спорт и отдых",
+        "financial_services_insurance": "Финансовые услуги и страхование",
+        "media_publishing": "Медиа и издательство",
+        "animals_pets": "Животные и домашние питомцы",
+        "education_training": "Образование и обучение",
+        "translation_language_services": "Переводы и языковые услуги",
+        "personal_services": "Личные услуги",
+        "career_employment": "Карьера и занятость",
+        "shopping_collectibles_gifts": "Покупки, коллекции и подарки",
+        "politics_government_services": "Политика и государственные услуги",
+        "telecommunications_internet_services": "Телекоммуникации и интернет-услуги",
+        "industrial_commercial_goods": "Промышленные и коммерческие товары",
+        "social_media_communications": "Социальные медиа и коммуникации",
+        "architecture_construction": "Архитектура и строительство",
+        "environmental_public_organizations": "Экологические и общественные организации",
+        "web_development": "Веб-разработка",
+        "design": "Дизайн",
+        "content": "Контент",
+        "healthcare": "Здравоохранение",
+        "finance": "Финансы",
+        "business_administration": "Бизнес и администрация",
+        "engineering": "Инженерия",
+        "law": "Юриспруденция",
+        "psychology": "Психология",
+        "customer_support": "Поддержка клиентов",
+        "analytics": "Аналитика",
+        "photography": "Фотография",
+        "fashion_style": "Мода и стиль",
+        "translations": "Переводы",
+        "sports_fitness": "Спорт и фитнес",
+        "architecture": "Архитектура",
+        "event_planning": "Планирование мероприятий",
+        "transportation": "Транспорт"
+    }
 }
