--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -73,5 +73,72 @@
     "creativity": "Ijod",
     "agreed": "Rozilik bildirganlar",
     "example": "Namuna",
-    "footer": "Aloqa uchun"
+    "footer": "Aloqa uchun",
+    "category_object": {
+        "lifestyle": "Turmush tarzi",
+        "food_blogger": "Ovqat blogeri/Kafe sharhi",
+        "beauty_blogger": "Go‘zallik blogeri",
+        "tourism": "Sayohat",
+        "gamer_streamer": "Geymer/Strimer",
+        "business_crypto": "Biznes/Daromad/Kripto",
+        "family": "Oila/Family",
+        "fashion": "Moda/Kiyim/Fashion",
+        "sport": "Sport",
+        "health_medicine": "Sog‘liqni saqlash/Tibbiyot",
+        "entertainment_viner": "Ko‘ngilochar/Viner",
+        "music_actor": "Musiqa/Aktyor",
+        "art": "San’at",
+        "tech_blogger": "Texno bloger",
+        "news_blog": "Yangiliklar blogi/Jamoatlar",
+        "motivation_self_development": "Motivatsiya va O‘z-o‘zini rivojlantirish",
+        "education": "Ta’lim va Tarbiya",
+        "auto_blog": "Avto blog",
+        "marketing": "Marketing",
+        "real_estate": "Ko‘chmas mulk",
+        "interior_design": "Interyer va Dizayn",
+        "religion": "Din",
+        "model": "Model",
+        "technology_electronics": "Texnologiya va elektronika",
+        "clothing_fashion_jewelry": "Kiyim, moda va zargarlik buyumlari",
+        "beauty_personal_care": "Go‘zallik va shaxsiy gigiyena",
+        "health_fitness": "Sog‘liqni saqlash va fitness",
+        "automobiles_autoparts": "Avtomobillar va avto qismlar",
+        "business_services": "Biznes xizmatlari",
+        "restaurants_food": "Restoranlar va ovqat",
+        "travel": "Sayohat",
+        "art_entertainment": "San’at va ko‘ngil ochish",
+        "sports_recreation": "Sport va dam olish",
+        "financial_services_insurance": "Moliyaviy xizmatlar va sug‘urta",
+        "media_publishing": "Media va nashriyot",
+        "animals_pets": "Hayvonlar va uy hayvonlari",
+        "education_training": "Ta’lim va o‘qitish",
+        "translation_language_services": "Tarjima va til xizmatlari",
+        "personal_services": "Shaxsiy xizmatlar",
+        "career_employment": "Karera va bandlik",
+        "shopping_collectibles_gifts": "Xaridlar, kolleksiyalar va sovg‘alar",
+        "politics_government_services": "Siyosat va davlat xizmatlari",
+        "telecommunications_internet_services": "Telekommunikatsiya va internet xizmatlari",
+        "industrial_commercial_goods": "Sanoat va tijorat mahsulotlari",
+        "social_media_communications": "Ijtimoiy media va kommunikatsiyalar",
+        "architecture_construction": "Arxitektura va qurilish",
+        "environmental_public_organizations": "Ekologik va jamoat tashkilotlari",
+        "web_development": "Veb-ishlab chiqish",
+        "design": "Dizayn",
+        "content": "Kontent",
+        "healthcare": "Sog‘liqni saqlash",
+        "finance": "Moliyaviy xizmatlar",
+        "business_administration": "Biznes va boshqaruv",
+        "engineering": "Muhandislik",
+        "law": "Huquqshunoslik",
+        "psychology": "Psixologiya",
+        "customer_support": "Mijozlarga qo‘llab-quvvatlash",
+        "analytics": "Analitika",
+        "photography": "Fotografiya",
+        "fashion_style": "Moda va uslub",
+        "translations": "Tarjima",
+        "sports_fitness": "Sport va fitness",
+        "architecture": "Arxitektura",
+        "event_planning": "Tadbirlarni rejalashtirish",
+        "transportation": "Transport"
+    }
 }
